--- a/SWP Project/Templates/view_users.html
+++ b/SWP Project/Templates/view_users.html
@@ -25,5 +25,6 @@
             {% endfor %}
         </tbody>
     </table>
+    <p><a href="{{ url_for('dashboard') }}">Back to Dashboard</a></p>
 </body>
 </html>
