--- a/SWP Project/Templates/reportincident.html
+++ b/SWP Project/Templates/reportincident.html
@@ -564,7 +564,7 @@
           <i class="fas fa-times"></i>
           Cancel
         </button>
-        <button type="submit" class="btn btn-primary">
+        <button type="submit" class="btn btn-primary" onclick="window.location.href='ThankYou.html'">
           <i class="fas fa-paper-plane"></i>
           Submit Report
         </button>
